--- a/src/blogposts/2020-01-03/2020-01-03.md
+++ b/src/blogposts/2020-01-03/2020-01-03.md
@@ -3,6 +3,7 @@ path: "/2020-04-03-first-post"
 title: "My First Post"
 date: "2020-04-03"
 author: "Alex"
+excerpt: "When I tried my first post I was ecstatic."
 ---
 
 # First Post
