added embedding videos and gifs to markdown

--- a/src/blogposts/2020-01-01/2020-01-01.md
+++ b/src/blogposts/2020-01-01/2020-01-01.md
@@ -1,9 +1,10 @@
 ---
-path: "/2020-04-01-zeroeth-post"
-title: "Happy days!"
-date: "2020-04-01"
-author: "Alex"
-excerpt: "In this post I talk about bugs"
+path: /2020-01-01-zeroeth-post
+title: Happy days!
+date: 2020-01-01
+author: Alex
+excerpt: In this post I talk about bugs
+featuredImage: ./unsplash-shoe-800x600.jpg
 ---
 
 # Bugs are pretty
