--- a/src/blogposts/2020-01-04/2020-01-04.md
+++ b/src/blogposts/2020-01-04/2020-01-04.md
@@ -1,9 +1,9 @@
 ---
-path: "/2020-04-04-second-post"
-title: "Second Post!"
-date: "2020-04-04"
-author: "Alex"
-excerpt: "Blah blah blah"
+path: /2020-01-04-second-post
+title: Second Post!
+date: 2020-01-04
+author: Alex
+excerpt: Blah blah blah
 ---
 
 # Second Post
