--- a/src/blogposts/2020-01-05/2020-01-05.md
+++ b/src/blogposts/2020-01-05/2020-01-05.md
@@ -1,9 +1,10 @@
 ---
-path: "/2020-04-05-fifth-post"
-title: "Whatever man!"
-date: "2020-04-01"
-author: "Alex"
-excerpt: "Wishy washy bugs."
+path: /2020-04-05-fifth-post
+title: Whatever man!
+date: 2020-01-05
+author: Alex
+excerpt: Wishy washy bugs.
+featuredImage: ./unsplash-girl-800x600.jpg
 ---
 
 # 5th Post
