--- a/src/blogposts/2020-01-02/2020-01-02.md
+++ b/src/blogposts/2020-01-02/2020-01-02.md
@@ -1,9 +1,9 @@
 ---
-path: "/2020-04-02-whenever-i-post"
-title: "My third Post, Technically"
-date: "2020-04-02"
-author: "Alex"
-excerpt: "We are third and happy little bugs"
+path: /2020-04-02-whenever-i-post
+title: My third Post, Technically
+date: 2020-04-02
+author: Alex
+excerpt: We are third and happy little bugs
 ---
 
 # Technically, third Post
