--- a/src/blogposts/2020-01-03/2020-01-03.md
+++ b/src/blogposts/2020-01-03/2020-01-03.md
@@ -1,11 +1,17 @@
 ---
-path: "/2020-04-03-first-post"
-title: "My First Post"
-date: "2020-04-03"
-author: "Alex"
-excerpt: "When I tried my first post I was ecstatic."
+path: /2020-04-03-first-post
+title: My First Post
+date: 2020-04-03
+author: Alex
+excerpt: When I tried my first post I was ecstatic.
 ---
 
 # First Post
 
 This is my first post.
+
+![Elephant gif](elephant.gif)
+
+![Long road](unsplash-road.jpg)
+
+`video: https://www.youtube.com/watch?v=fbS7b6ZG3Ho`
